<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".Login_And_Registration.LoginActivity"
    android:id="@+id/main"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/icon" />

    <!-- App Title -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mealmatch"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />

    <!-- Name Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        app:boxStrokeColor="@color/light_green"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/light_green"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/tvAppTitle"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/light_green"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/light_green"
        android:hint="@string/email"
        android:layout_below="@id/tilName"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/light_green"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/light_green"
        android:hint="@string/password"
        android:layout_below="@id/tilEmail"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Checkboxes (Restaurant & Organization) -->
    <LinearLayout
        android:id="@+id/checkboxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tilPassword"
        android:layout_marginBottom="16dp">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/restaurant_checkbox"
            app:buttonTint="@color/checkbox_color"
            android:layout_weight="1"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxOrganization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/organization_checkBox"
            app:buttonTint="@color/checkbox_color"
            android:layout_gravity="end"/>

    </LinearLayout>

    <!-- Log In Button -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPassword"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="16dp"
        android:text="Log In"
        android:textColor="@color/white"
        app:backgroundTint="#80E27E"
        app:cornerRadius="12dp" />


    <!-- Sign In Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="5dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:backgroundTint="#80E27E"
        app:cornerRadius="12dp" />

</RelativeLayout>
