<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">



    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/light_green"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/registration_BTN_return_button"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/left_arrow"/>
    </LinearLayout>

    <!-- Title -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChooseIdentity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_acount_type"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="250dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />

    <!-- Container for Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvChooseIdentity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <!-- Button 1: Restaurant -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRestaurant"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#80E27E"
            android:text="@string/restaurant"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            app:cornerRadius="8dp" />

        <!-- Button 2: Organization -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOrganization"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:backgroundTint="#80E27E"
            android:text="@string/organization"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            app:cornerRadius="8dp" />
    </LinearLayout>
</RelativeLayout>