<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/light_green"
        android:layout_marginTop="20dp"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/registration_BTN_return_button"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/left_arrow"/>


    </LinearLayout>




    <!-- Title -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create your account"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="5dp" />

    <!-- Restaurant Name Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRestaurantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/light_green"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/light_green"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Restaurant Name"
            android:textColor="@color/black"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/light_green"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/light_green"
        android:layout_below="@id/tilRestaurantName"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEmail"
        app:boxStrokeColor="@color/light_green"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/light_green"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="password:one uppercase,lowercase, anumber"
            android:textColor="@color/black"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone Number Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/light_green"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/light_green"
        android:layout_below="@id/tilPassword"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone_Number"
            android:textColor="@color/black"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Address Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/light_green"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/light_green"
        android:layout_below="@id/tilPhoneNumber"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address : Street,Number,City"
            android:textColor="@color/black"
            android:inputType="textPostalAddress" />
    </com.google.android.material.textfield.TextInputLayout>'

    <!-- Address Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiltype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/light_green"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/light_green"
        android:layout_below="@id/tilAddress"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_of_resturants"
            android:textColor="@color/black"
            android:inputType="textPostalAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/OpenAndClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tiltype"
        android:layout_marginTop="16dp"
        android:padding="16dp">

        <!-- OPEN Label -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/openLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:gravity="center_vertical" />

        <!-- OPEN Hour Spinner -->
        <Spinner
            android:id="@+id/openHourSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"/>

        <!-- CLOSE Label -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/closeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CLOSE"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center_vertical" />

        <!-- CLOSE Hour Spinner -->
        <Spinner
            android:id="@+id/closeHourSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Upload Certificate Button -->
<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/btnUploadCertificate"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Upload your business certificate"-->
<!--        android:layout_below="@+id/OpenAndClose"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:cornerRadius="12dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:backgroundTint="#80E27E" />-->

    <!-- Sign Up Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@id/OpenAndClose"
        android:layout_marginTop="16dp"
        app:cornerRadius="12dp"
        android:textColor="@color/white"
        android:backgroundTint="#80E27E" />

</RelativeLayout>
